--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="./fontawesome/css/all.min.css"/>
-    <title>Activity tracker</title>
+    <title>Chat Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
