--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="http://localhost:3000/fontawesome/css/all.min.css"/>
     <title>Chat Application</title>
+    <script src="https://use.fontawesome.com/d660b4bb3a.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
