--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="http://localhost:3000/fontawesome/css/all.min.css"/>
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="/fontawesome/css/all.min.css"/>
     <title>Chat Application</title>
     <script src="https://use.fontawesome.com/d660b4bb3a.js"></script>
   </head>
@@ -16,4 +17,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+
 </html>
