--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,9 @@
     />
     <link rel="manifest" href="/manifest.json" />
     <title>Chat Application</title>
+    <!-- <link rel="stylesheet" href="/fontawesome/css/all.min.css"/>
+    <script src="/fontawesome/js/all.min.js"></script> -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="https://use.fontawesome.com/d660b4bb3a.js"></script>
   </head>
   <body>
