meta tags added
seo improvements and preview image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="A React application to chat with people. Data hosted with MongoDB Atlas and served with Nodejs Express. Built by Rafael Contreras"/>
     <link rel="manifest" href="/manifest.json" />
     <title>Chat Application</title>
+
+    <meta name="description" content="A React application to chat with people. Data hosted with MongoDB Atlas and served with Nodejs Express. Built by Rafael Contreras.">
+
+
+    <meta property="og:title" content="Chat Application"/>
+    <meta property="og:description" content="A React application to chat with people. Data hosted with MongoDB Atlas and served with Nodejs Express. Built by Rafael Contreras.">
+    <meta property="og:image" content="%PUBLIC_URL%/images/home-screen.png" />
+    <img src="%PUBLIC_URL%/images/home-screen.png" style="display: none !important;" />
+    <meta property="og:url" content="%PUBLIC_URL%"/>
+    <meta property="og:site_name" content="Chat Application"/>
     <!-- <link rel="stylesheet" href="/fontawesome/css/all.min.css"/>
     <script src="/fontawesome/js/all.min.js"></script> -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
