--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,7 @@
     <img src="%PUBLIC_URL%/images/home-screen.png" style="display: none !important;" />
     <meta property="og:url" content="%PUBLIC_URL%"/>
     <meta property="og:site_name" content="Chat Application"/>
+    <meta name="author" content="Rafael Contreras">
     <!-- <link rel="stylesheet" href="/fontawesome/css/all.min.css"/>
     <script src="/fontawesome/js/all.min.js"></script> -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
